Strategic Battle Systems, Templates, Turns, Units
Signed-off-by: Richard J Hancock <rjhancock@tapenvy.us>